update 7 files Add Dark mode #CSS Fixes #14

--- a/src/styles/content.module.scss
+++ b/src/styles/content.module.scss
@@ -20,6 +20,9 @@
 .link-title {
   text-decoration: none;
   color: var(--text-menu);
+  &:visited {
+    color: var(--visited);
+  }
   &:hover {
     color: var(--text-hover);
   }
